--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,39 @@
 version: '3.8'
 
 services:
-  # The PHP-FPM service (handles running PHP scripts)
+  # PHP Application Service (Backend)
   app:
     build:
       context: .
       dockerfile: Dockerfile
-    # CRITICAL CHANGE: Removed source code mount (./:/var/www/html).
-    # Source code is now copied into the image during the build process (Dockerfile).
-    volumes:
-      # Named volume for persistent user data (entries.txt)
-      - bni_data_volume:/var/www/html/data
-    # Set user to match Nginx/PHP standards for file permissions
-    user: "82:82" # Standard www-data user/group
-    restart: always
+    image: bni-wheel-app:latest
+    container_name: bni-wheel-app
+    # Internal port for PHP-FPM
     expose:
-      - "9000"
-
-  # The Nginx web server service (handles requests from the browser)
-  web:
-    image: nginx:stable-alpine
-    # CRITICAL CHANGE: Removed source code mount (./:/var/www/html).
-    # Nginx will serve files from the built image's content.
+      - 9000
+    # Mount the persistent volume for saved entries
     volumes:
-      # Only mount the Nginx configuration file
-      - ./default.conf:/etc/nginx/conf.d/default.conf
+      - bni_data_volume:/var/www/html/data
+
+  # Nginx Web Server Service (Frontend)
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile.nginx
+    image: bni-wheel-web:latest
+    container_name: bni-wheel-web
+    # Port mapping: HostPort:ContainerPort
+    # Using 8081 on the host to avoid conflicts
     ports:
-      - "8080:80" # Map host port 8080 to container port 80
+      - "8081:80"
+    # Connect Nginx to the PHP-FPM service
     depends_on:
       - app
-    restart: always
+    # Mount the persistent volume so Nginx can see the saved entries (if needed)
+    volumes:
+      - bni_data_volume:/var/www/html/data
 
-# Define the named volume for persistence
+# Defined the named volume for persistence
 volumes:
   bni_data_volume:
     driver: local
